LIBITD-2541. Implemented the containment check for an IP address in a group
Created some tests, but will work on more.
Added cidr as a submodule in src/ipmanager/api.
Updated the views to work with the contains method

https://umd-dit.atlassian.net/browse/LIBITD-2541

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ version = "1.0.0-dev"
 dependencies = [
     "django",
     "django-umd-lib-style",
-    "django-extensions"
+    "django-extensions",
+    "binarytree",
 ]
 
 [project.optional-dependencies]
