LIBITD-2563. Partial SAML implementation.
A partial SAML implementation - not fully working yet.

https://umd-dit.atlassian.net/browse/LIBITD-2563

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ dependencies = [
     "django",
     "django-umd-lib-style",
     "django-extensions",
+    "django-environ",
     "binarytree",
+    "djangosaml2",
+    "urlobject"
 ]
 
 [project.optional-dependencies]
