--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/cidr"]
-	path = src/cidr
-	url = git@github.com:wallberg/cidr.git
+[submodule "src/ipmanager/core/cidr"]
+	path = src/ipmanager/core/cidr
+	url = https://github.com/wallberg/cidr.git
