--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,16 @@ authors = [
 ]
 version = "1.0.0-dev"
 dependencies = [
+    "binarytree~=6.5",
+    "click~=8.1",
     "django~=5.2.9",
     "django-umd-lib-style~=1.2",
     "django-extensions~=4.1",
     "django-environ~=0.12",
-    "binarytree~=6.5",
     "djangosaml2~=1.11",
     "urlobject~=3.0.0",
+    "waitress~=3.0",
+    "whitenoise~=6.9"
 ]
 
 [dependency-groups]
@@ -28,6 +31,12 @@ test = [
     "pytest-django~=4.11",
     "ruff~=0.14",
 ]
+prod = [
+    "psycopg[binary]"
+]
+
+[project.scripts]
+ipmanager = "ipmanager.server:run"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "ipmanager.settings"
