--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,10 @@ dependencies = [
     "django-environ",
     "binarytree",
     "djangosaml2",
-    "urlobject"
+    "urlobject",
+    "waitress~=3.0",
+    "click~=8.1",
+    "whitenoise~=6.9"
 ]
 
 [project.optional-dependencies]
@@ -18,6 +21,12 @@ test = [
     "pytest-django",
     "ruff",
 ]
+prod = [
+    "psycopg[binary]"
+]
+
+[project.scripts]
+ipmanager = "ipmanager.server:run"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "ipmanager.settings"
