LIBITD-2656. Updates to compose.yaml
- use Docker-managed volume for database
- renamed containers to "db" and "app"
- removed custom network
- removed unnecessary quotes from environment variables
- removed start-ipmanagers-dependencies container

https://umd-dit.atlassian.net/browse/LIBITD-2656

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,56 +1,44 @@
-version: "1"
-
 services:
-  ipmanager-postgres:
+  db:
     image: postgres:17
-    networks: 
-      - ipmanager-network
     volumes:
-      - ./dockervols/postgres-data:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
     ports:
       - "5432"
     environment:
-      - "POSTGRES_PASSWORD=Pass1234"
-      - "POSTGRES_USER=ipmanager"
-      - "POSTGRES_DB=ipmanager"
+      - POSTGRES_PASSWORD=Pass1234
+      - POSTGRES_USER=ipmanager
+      - POSTGRES_DB=ipmanager
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "ipmanager"]
+      interval: 15s
+      timeout: 10s
+      retries: 5
 
-  start-ipmanager-dependencies:
-    image: dadarek/wait-for-dependencies
-    networks:
-      - ipmanager-network
-    depends_on:
-     - "ipmanager-postgres"
-    command: "ipmanager-postgres:5432"
-
-  ipmanager-web:
+  app:
+    image: docker.lib.umd.edu/ipmanager-django:latest
     build:
       context: .
       dockerfile: Dockerfile
-    networks:
-      - ipmanager-network
     ports:
       - "3001:3001"
     volumes:
       - ./env:/etc/ipmanager/saml
     environment:
-      - "BASE_URL=http://ipmanager-local:3001/"
-      - "DB_ENGINE=django.db.backends.postgresql"
-      - "DB_HOST=ipmanager-postgres"
-      - "DB_PORT=5432"
-      - "DB_NAME=ipmanager"
-      - "DB_USER=ipmanager"
-      - "DB_PASSWORD=Pass1234"
-      - "SERVER_PORT=3001"
-      - "XMLSEC1_PATH=/usr/bin/xmlsec1"
-      - "SECRET_KEY=9cc159ea50782f9cd254793eb1ad604d381549a6f9ae7dcaef8d6cbed17406c0"
-      - "ENVIRONMENT=production"
-      - "DEBUG=true"
-      - "SAML_KEY_FILE=/etc/ipmanager/saml/ipmanager-key.key"
-      - "SAML_CERT_FILE=/etc/ipmanager/saml/ipmanager-cert.crt"
-      - "SESSION_COOKIE_SECURE=False"
-      - "SAML_SESSION_COOKIE_SAMESITE=Lax"
+      - DB_ENGINE=django.db.backends.postgresql
+      - DB_HOST=db
+      - DB_NAME=ipmanager
+      - DB_PASSWORD=Pass1234
+      - DB_PORT=5432
+      - DB_USER=ipmanager
+      - SAML_CERT_FILE=/etc/ipmanager/saml/ipmanager-local.crt
+      - SAML_KEY_FILE=/etc/ipmanager/saml/ipmanager-local.key
+      - SAML_SESSION_COOKIE_SAMESITE=Lax
+      - SECRET_KEY=9cc159ea50782f9cd254793eb1ad604d381549a6f9ae7dcaef8d6cbed17406c0
+      - SESSION_COOKIE_SECURE=False
     depends_on:
-     - "start-ipmanager-dependencies"
-    
-networks:
-  ipmanager-network:
+      db:
+        condition: service_healthy
+
+volumes:
+  db-data:
