LIBITD-2565. Added django-health-check package.
- provides the command `src/manage.py health_check` to use for liveness checks
- use the psutil disk and memory checks

https://umd-dit.atlassian.net/browse/LIBITD-2565

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,9 @@ dependencies = [
     "django-umd-lib-style~=1.2",
     "django-extensions~=4.1",
     "django-environ~=0.12",
+    "django-health-check~=3.20",
     "djangosaml2~=1.11",
+    "psutil~=7.2",
     "urlobject~=3.0.0",
     "waitress~=3.0",
     "whitenoise~=6.9"
