Dockerfile build fixes.
Ensure the correct versions of pip and setuptools are present.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,3 +56,7 @@ filterwarnings = [
 # Prefer single quotes over double quotes.
 quote-style = "single"
 exclude = ["manage.py"]
+
+[build-system]
+requires = ["setuptools>=66.1.0"]
+build-backend = "setuptools.build_meta"
